--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -3,7 +3,7 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="java-output-path" value="/Escolar-02/build/classes"/>
-        <property name="context-root" value="Vendas-JSF"/>
+        <property name="java-output-path" value="/Vendas-JSF/build/classes"/>
+        <property name="context-root" value="Escolar-02"/>
     </wb-module>
 </project-modules>
